use LicenseCategory for license_type
